--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "jobmetric/laravel-package-core": "^1.7"
     },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "JobMetric\\PaymentMethod\\": "src/",
             "JobMetric\\PaymentMethod\\Factories\\": "database/factories/"
