--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
     "require": {
         "php": ">=8.0.1",
         "laravel/framework": ">=9.19",
-        "jobmetric/laravel-package-core": "^1.7"
+        "jobmetric/laravel-package-core": "^1.7",
+        "jobmetric/laravel-extension": "^1.3"
     },
     "autoload": {
         "files": [
             "src/helpers.php"
         ],
         "psr-4": {
-            "JobMetric\\PaymentMethod\\": "src/",
-            "JobMetric\\PaymentMethod\\Factories\\": "database/factories/"
+            "JobMetric\\PaymentMethod\\": "src/"
         }
     },
     "extra": {
